# gen-api-wrapper

./: Cargo.toml  LICENSE  README.md
ci/: vars.yaml
src/: client.rs  endpoint.rs  endpoint_prelude.rs  error.rs  lib.rs  params.rs  query.rs
