[package]
name = "gen-api-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
description = "Attempt at a generic version of the api wrapper from the gitlab crate."
rust-version = "1.65.0"
license = "MIT"
publish = ["ancalagon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
bytes = "^1"
http = "~0.2"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.2"
serde_urlencoded = "~0.7"
thiserror = "1.0.31"
url = { version = "^2", features = ["serde"] }
