[package]
name = "gen-api-wrapper"
version = "1.0.1"
edition = "2021"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
description = "Attempt at a generic version of the api wrapper from the gitlab crate."
rust-version = "1.80.0"
license = "MIT"

[dependencies]
async-trait = "0.1.53"
bytes = { version = "1", features = ["serde"] }
http = "1"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.2"
thiserror = "1.0.31"
url = { version = "2", features = ["serde"] }
